# revive

./: .dockerignore  .env.example  .gitignore  ARCA_RETURNS_AGENT_PLAN.md  Dockerfile  ENV_SETUP.md  IMPLEMENTATION_PLAN.md  PILLAR4_RETURN_PREVENTION.md  PILLAR4_V2.md  PROGRESS.md  README.md  SELLER_DECISION_MODEL_PLAN.md  VERIFICATION_v2.md  demo_script.md  docker-compose.yml  document.tex  final_idea.md  final_idea1.md  final_idea_v1.md  final_idea_v2.md  final_idea_v3.md  nginx.conf  notes.txt  package-lock.json  package.json  render.yaml  research.md  seller_central_plan.md
backend/: .env.example  .env.production.example  Procfile  pyproject.toml  requirements.txt  start_django.sh
backend/core/: apps.py  events.py  lifecycle.py  models.py  seller_views.py  serializers.py  signals.py  storage.py  tasks.py  views.py
backend/core/migrations/: 0002_listing_route_fields.py  0003_user_fit_fields.py  0003_v2_fields.py  0004_order_size.py  0004_product_rating.py  0005_merge_0004_order_size_0004_product_rating.py  0006_listing_images_alter_listing_grade_and_more.py  0007_alter_listing_status.py  0008_review.py  0009_listing_indexes.py  0010_merge_20260616_2110.py  0012_merge_20260704_1457.py  (+2 more)
backend/grade/: inspect.py  rufus_urls.py  tasks.py  tryon_urls.py  urls.py  views.py
backend/green/: credits.py  models.py  profile.py  urls.py  views.py
backend/prevent/: fit_profile.py  urls.py  views.py
backend/revive/: celery.py  settings.py  urls.py
backend/route/: apps.py  tasks.py  urls.py  views.py
backend/trust/: models.py  services.py  urls.py  views.py
(+210 files in other folders)
