[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url==2.1.0",
    "django==4.2.13",
    "django-cors-headers==4.3.1",
    "djangorestframework==3.15.1",
    "djangorestframework-simplejwt==5.3.1",
    "lightgbm>=4.6.0",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "openai>=2.41.1",
    "openai-clip>=1.0.1",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pillow==10.3.0",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.1",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "tensorflow>=2.21.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.12.0",
]
